Fix horizontal align of text inputs

--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,9 @@
 
 * { padding: 0; margin: 0; box-sizing: border-box; }
 
-:-ms-input-placeholder { padding-left: 55px; font-family: 'Titillium'; color: #afafaf; font-size: 16px; }
+:-ms-input-placeholder { font-family: 'Titillium'; color: #afafaf; font-size: 16px; }
 
-::placeholder { padding-left: 55px; font-family: 'Titillium'; color: #afafaf; font-size: 16px; }
+::placeholder { font-family: 'Titillium'; color: #afafaf; font-size: 16px; }
 
 body { font-family: Titillium-600; background-image: linear-gradient(red, #7efff5); background-repeat: no-repeat; }
 
@@ -18,7 +18,7 @@ h2 { font-size: 32px; color: #ffffff; text-shadow: 1px 2px 2px rgba(43, 1, 0, 0.
 
 form { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-align: center; align-items: center; padding: 11px; width: 420px; background-color: #f4f4f4; box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.23); }
 
-.input-text { margin: 11px; width: 340px; height: 41px; background-color: #f8f8f8; border: 1px solid #c6c6c6; }
+.input-text { margin: 11px; width: 340px; height: 41px; background-color: #f8f8f8; border: 1px solid #c6c6c6; padding-left: 60px; }
 
 .msg-input { height: 230px; }
 
