--- a/sass/global/_global.scss
+++ b/sass/global/_global.scss
@@ -6,11 +6,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
- // border: 1px solid red;
+  // border: 1px solid red;
 }
 
 ::placeholder {
-  padding-left: 55px;
+  // padding-left: 55px;
   font-family: 'Titillium';
   color: $form-font-color;
   font-size: $font-size-xs;
@@ -48,6 +48,7 @@ form {
   height: 41px;
   background-color: $input-bcg;
   border: 1px solid #c6c6c6;
+  padding-left: 60px;
 }
 
 .msg-input {
